# PatternRecognition

Clustering/K-Means/: CMakeLists.txt  main.cpp
CurveFitting/: CMakeLists.txt  main.cpp
LineFitting/: CMakeLists.txt  main.cpp
